--- a/style.css
+++ b/style.css
@@ -476,3 +476,30 @@ button:hover { background: var(--n); color: #000; box-shadow: 0 0 15px var(--n);
     filter: grayscale(1);
     border-bottom: 1px solid rgba(255, 0, 255, 0.2);
 }
+#custom-menu {
+    position: fixed; /* Обязательно fixed */
+    z-index: 10000;
+    background: #01050a;
+    border: 1px solid var(--p);
+    box-shadow: 0 0 15px var(--p);
+    min-width: 150px;
+    display: none; /* Скрыто по умолчанию */
+}
+
+.menu-item {
+    color: var(--p);
+    font-family: 'Orbitron', sans-serif;
+    font-size: 11px;
+    padding: 10px;
+    cursor: pointer;
+    text-transform: uppercase;
+    text-align: center;
+    border: none;
+    background: transparent;
+    transition: 0.2s;
+}
+
+.menu-item:hover {
+    background: var(--p);
+    color: #000;
+}
